Fix menu hovering (taller heading text) plus some pixel shifting

--- a/src/app/menu/menu.styl
+++ b/src/app/menu/menu.styl
@@ -19,6 +19,8 @@
         gap 3px
 
       .icon-heading-pair>.heading
+        height var(--header-height)
+        line-height var(--header-height)
         get-font-size(small)        
         text-transform uppercase
         letter-spacing 0.05em
@@ -83,6 +85,8 @@
 
         .caption
           get-font-size(small)
+          font-family $theme-font-alt
+          color $color-grey
 
 
 
